syntax = "proto3";

package bonanza.model.evaluation;

import "bonanza.build/pkg/proto/model/core/core.proto";
import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";

option go_package = "bonanza.build/pkg/proto/model/evaluation";

// Remote evaluation.
//
// This package provides action and result types that a worker can
// implement if it supports Skyframe-like parallel evaluation
// (https://bazel.build/reference/skyframe).
//
// The client can provide a set of keys for which it wants the worker to
// compute its values. Furthermore, it can provide overrides for keys,
// forcing the evaluation to use a value that was already compute
// previously.
//
// This API can be thought of as the bottom half of a build system.
// Namely, it provides a mechanism for starting builds and specifying
// what needs to be built. Semantics for how a build behaves (e.g.,
// interpreting BUILD and .bzl files) should be implemented as a layer
// on top of this.

// Keys is a list of evaluation keys. It can, for example, be used to
// describe the set of dependencies of an evaluation key, or to specify
// which keys need to be evaluated.
message Keys {
  message Parent {
    bonanza.model.core.DecodableReference reference = 1
        [(bonanza.model.core.object_format) = {
          proto_list_type_name:
            "bonanza.model.evaluation.Keys";
        }];
  }

  oneof level {
    // A single key that can be provided to the evaluation function.
    bonanza.model.core.Any leaf = 1;

    // B-tree node containing additional keys.
    Parent parent = 2;
  }
}

// Graphlet contains the value of a key for which evaluation was
// performed, and a list of dependencies that were requested during
// evaluation. Depending on server-side heuristics, the values of
// dependencies are included as well.
message Graphlet {
  // The value that was emitted by the computer for the given key.
  //
  // This field may be left unset if the computer yielded a native
  // (non-message) value.
  bonanza.model.core.Any value = 1;

  // Keys of dependencies that were accessed by the computer while
  // processing the current key. Only keys whose values are variable
  // (i.e., transitively dependent on keys for which overrides are
  // present) are included.
  repeated Keys direct_variable_dependency_keys = 2;

  // Evaluations of direct or transitive dependencies of the current
  // key. Whether an evaluation is stored in this specific graphlet or
  // in one of the parent graphlets is based on server-side heuristics.
  repeated Evaluations dependency_evaluations = 3;
}

// Evaluations is a list of keys for which evaluation has been
// attempted, and for which values and dependencies are provided.
message Evaluations {
  message Parent {
    // Reference of the object containing additional Evaluations objects.
    bonanza.model.core.DecodableReference reference = 1
        [(bonanza.model.core.object_format) = {
          proto_list_type_name:
            "bonanza.model.evaluation.Evaluations";
        }];

    // Reference of the key of the first leaf Evaluations object
    // contained in this tree to aid lookups. All Evaluations objects are
    // sorted by a fictive reference of the key, which can be obtained
    // by calling model_core.ComputeTopLevelMessageReference() against
    // the anypb.Any message.
    bytes first_key_reference = 2;
  }

  message Leaf {
    // Reference of the key that was provided to the computer, obtained
    // by calling model_core.ComputeTopLevelMessageReference() against
    // the anypb.Any message.
    bytes key_reference = 1;

    // The value that was yielded by the evaluation function, and the
    // set of dependencies the evaluation function accessed.
    Graphlet graphlet = 2;
  }

  oneof level {
    // A single evaluated key.
    Leaf leaf = 1;

    // B-tree node containing additional Evaluations objects.
    Parent parent = 2;
  }
}

message Action {
  // If set, keys for which the evaluation function should not be
  // invoked. Instead, literal values are provided.
  //
  // Note that overrides are only installed for keys that are provided
  // directly in this list. Evaluations of dependencies are ignored.
  bonanza.model.core.DecodableReference overrides_reference = 1
      [(bonanza.model.core.object_format) = {
        proto_list_type_name:
          "bonanza.model.evaluation.Evaluations";
      }];

  // Keys for which evaluation function should be invoked.
  repeated Keys requested_keys = 2;
}

message Progress {
  // The number of keys which still need to be evaluated, but have not
  // been queued because one of their dependencies has not been
  // evaluated yet.
  uint64 blocked_keys_count = 1;

  // The number of keys which are currently queued for evaluation.
  uint64 evaluatable_keys_count = 2;

  message EvaluatingKey {
    // The input message that is provided to the evaluation function.
    bonanza.model.core.Any key = 1;

    // The time at which the first attempt was started to evaluate this
    // key. Evaluation may have stopped due to dependencies whose values
    // have not been computed yet.
    google.protobuf.Timestamp first_evaluation_start = 2;

    // The time at which the current attempt was started.
    google.protobuf.Timestamp current_evaluation_start = 3;

    // The number of times a previous attempt was made to evaluate this
    // key, but failed due missing dependencies.
    uint32 restarts = 4;
  }

  // Keys for which the evaluation function is currently being executed,
  // sorted from oldest to newest. This list may be truncated if the
  // number of keys being processed is very large.
  repeated EvaluatingKey oldest_evaluating_keys = 3;

  // The number of keys for which the evaluation function is currently
  // being executed, which could not be stored in the list above.
  uint64 additional_evaluating_keys_count = 4;

  // The number of keys for which evaluation finished, and are currently
  // queued for upload.
  uint64 evaluated_keys_count = 5;

  // The number of keys for which results are currently being uploaded
  // to storage, so that subsequent builds can reuse them.
  uint64 uploading_keys_count = 6;

  // The number of keys for which evaluation and uploading has
  // completed.
  uint64 completed_keys_count = 7;
}

message Result {
  message Failure {
    // If set, the failure occurred while executing the evaluation
    // function. A stack trace of all keys leading up to the failure are
    // provided. The last element corresponds to the key whose
    // evaluation caused the failure.
    repeated bonanza.model.core.Any stack_trace_keys = 1;

    // Failure error message.
    google.rpc.Status status = 2;
  }

  // Details of the build failure, if any failure occurred.
  Failure failure = 1;

  // If set, list of outcomes of the keys that were evaluated during
  // this build.
  bonanza.model.core.DecodableReference outcomes_reference = 2
      [(bonanza.model.core.object_format) = {
        proto_list_type_name:
          "bonanza.model.evaluation.Evaluation";
      }];
}
